<resources>
    <string name="app_name">DateTimePicker</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="text_DatePicker">DatePicker</string>
    <string name="text_DatePicker2">OnDateChangedListener</string>
    <string name="text_TimePicker1">TimePicker</string>
    <string name="text_TimePicker2">OnTimeChangedListener</string>
    <string name="text_Dialog">对话框方式</string>
    <string name="btn_DatePickerDialog">DatePickerDialog</string>
    <string name="btn_TimePickerDialog">TimePickerDialog</string>
</resources>
